ID:5673 fix text-alignment for buttons
id: 5673

--- a/dev/sass/qwiki/_buttons.scss
+++ b/dev/sass/qwiki/_buttons.scss
@@ -101,6 +101,12 @@ $icon-font-size: 1.45em;
     &, &:link, &:visited {
         @include button-hover-active($button-background, 3%, $ma-secondary-text);
     }
+    &.text-left {
+        text-align: left;
+    }
+    &.text-right {
+        text-align: right;
+    }
 }
 
 .button, a.button {
